@@ -11,6 +11,10 @@ matrix:
 # commands to install with dependencies
 install:
   - "pip install --upgrade pip"
+  - "pip install --upgrade pytest"
+  - "pip install --upgrade --force-reinstall setuptools"
+  - "pip install gunicorn==19.9.0"
+  - "pip install huckle==2.3.1"
   - "pip install -e ."
 
 # command to run tests
